Fix broken readable columns
They were broken when changing width-readable to fixed width earlier.

--- a/src/utilities/layout/_columns.scss
+++ b/src/utilities/layout/_columns.scss
@@ -3,7 +3,7 @@
 
 .columns-readable,
 .columns-readable-viewport {
-  @include width-readable();
+  max-width: $readable-line-length-max;
 }
 
 @supports (column-span: all) {
